QtBeef/src/Qt/qevent.bf

class QWheelEvent : IQWheelEvent, IQSinglePointEvent, IQPointerEvent, IQInputEvent, IQEvent
{
	private QWheelEvent_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QWheelEvent_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(IQPointF pos, IQPointF globalPos, IQPoint pixelDelta, IQPoint angleDelta, void* buttons, void* modifiers, Qt_ScrollPhase phase, bool inverted)
	{
		this.ptr = CQt.QWheelEvent_new((.)pos?.ObjectPtr, (.)globalPos?.ObjectPtr, (.)pixelDelta?.ObjectPtr, (.)angleDelta?.ObjectPtr, buttons, modifiers, phase, inverted);
	}
	public this(IQPointF pos, IQPointF globalPos, IQPoint pixelDelta, IQPoint angleDelta, void* buttons, void* modifiers, Qt_ScrollPhase phase, bool inverted, Qt_MouseEventSource source)
	{
		this.ptr = CQt.QWheelEvent_new2((.)pos?.ObjectPtr, (.)globalPos?.ObjectPtr, (.)pixelDelta?.ObjectPtr, (.)angleDelta?.ObjectPtr, buttons, modifiers, phase, inverted, source);
	}
	public this(IQPointF pos, IQPointF globalPos, IQPoint pixelDelta, IQPoint angleDelta, void* buttons, void* modifiers, Qt_ScrollPhase phase, bool inverted, Qt_MouseEventSource source, IQPointingDevice device)
	{
		this.ptr = CQt.QWheelEvent_new3((.)pos?.ObjectPtr, (.)globalPos?.ObjectPtr, (.)pixelDelta?.ObjectPtr, (.)angleDelta?.ObjectPtr, buttons, modifiers, phase, inverted, source, (.)device?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QWheelEvent_Delete(this.ptr);
	}
	public QWheelEvent_Ptr Clone()
	{
		return QWheelEvent_Ptr(CQt.QWheelEvent_Clone((.)this.ptr.Ptr));
	}
	public QPoint_Ptr PixelDelta()
	{
		return QPoint_Ptr(CQt.QWheelEvent_PixelDelta((.)this.ptr.Ptr));
	}
	public QPoint_Ptr AngleDelta()
	{
		return QPoint_Ptr(CQt.QWheelEvent_AngleDelta((.)this.ptr.Ptr));
	}
	public Qt_ScrollPhase Phase()
	{
		return CQt.QWheelEvent_Phase((.)this.ptr.Ptr);
	}
	public bool Inverted()
	{
		return CQt.QWheelEvent_Inverted((.)this.ptr.Ptr);
	}
	public bool IsInverted()
	{
		return CQt.QWheelEvent_IsInverted((.)this.ptr.Ptr);
	}
	public bool HasPixelDelta()
	{
		return CQt.QWheelEvent_HasPixelDelta((.)this.ptr.Ptr);
	}
	public bool IsBeginEvent()
	{
		return CQt.QWheelEvent_IsBeginEvent((.)this.ptr.Ptr);
	}
	public bool IsUpdateEvent()
	{
		return CQt.QWheelEvent_IsUpdateEvent((.)this.ptr.Ptr);
	}
	public bool IsEndEvent()
	{
		return CQt.QWheelEvent_IsEndEvent((.)this.ptr.Ptr);
	}
	public Qt_MouseEventSource Source()
	{
		return CQt.QWheelEvent_Source((.)this.ptr.Ptr);
	}
	public Qt_MouseButton Button()
	{
		return CQt.QSinglePointEvent_Button((.)this.ptr.Ptr);
	}
	public void* Buttons()
	{
		return CQt.QSinglePointEvent_Buttons((.)this.ptr.Ptr);
	}
	public QPointF_Ptr Position()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_Position((.)this.ptr.Ptr));
	}
	public QPointF_Ptr ScenePosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_ScenePosition((.)this.ptr.Ptr));
	}
	public QPointF_Ptr GlobalPosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_GlobalPosition((.)this.ptr.Ptr));
	}
	public QObject_Ptr ExclusivePointGrabber()
	{
		return QObject_Ptr(CQt.QSinglePointEvent_ExclusivePointGrabber((.)this.ptr.Ptr));
	}
	public void SetExclusivePointGrabber(IQObject exclusiveGrabber)
	{
		CQt.QSinglePointEvent_SetExclusivePointGrabber((.)this.ptr.Ptr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public QPointingDevice_Ptr PointingDevice()
	{
		return QPointingDevice_Ptr(CQt.QPointerEvent_PointingDevice((.)this.ptr.Ptr));
	}
	public QPointingDevice_PointerType PointerType()
	{
		return CQt.QPointerEvent_PointerType((.)this.ptr.Ptr);
	}
	public void SetTimestamp(c_ulonglong timestamp)
	{
		CQt.QPointerEvent_SetTimestamp((.)this.ptr.Ptr, timestamp);
	}
	public void* PointCount()
	{
		return CQt.QPointerEvent_PointCount((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr Point(void* i)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_Point((.)this.ptr.Ptr, i));
	}
	public void** Points()
	{
		return CQt.QPointerEvent_Points((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr PointById(c_int id)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_PointById((.)this.ptr.Ptr, id));
	}
	public bool AllPointsGrabbed()
	{
		return CQt.QPointerEvent_AllPointsGrabbed((.)this.ptr.Ptr);
	}
	public bool AllPointsAccepted()
	{
		return CQt.QPointerEvent_AllPointsAccepted((.)this.ptr.Ptr);
	}
	public void SetAccepted(bool accepted)
	{
		CQt.QPointerEvent_SetAccepted((.)this.ptr.Ptr, accepted);
	}
	public QObject_Ptr ExclusiveGrabber(IQEventPoint point)
	{
		return QObject_Ptr(CQt.QPointerEvent_ExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr));
	}
	public void SetExclusiveGrabber(IQEventPoint point, IQObject exclusiveGrabber)
	{
		CQt.QPointerEvent_SetExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public void ClearPassiveGrabbers(IQEventPoint point)
	{
		CQt.QPointerEvent_ClearPassiveGrabbers((.)this.ptr.Ptr, (.)point?.ObjectPtr);
	}
	public bool AddPassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_AddPassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public bool RemovePassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_RemovePassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public QInputDevice_Ptr Device()
	{
		return QInputDevice_Ptr(CQt.QInputEvent_Device((.)this.ptr.Ptr));
	}
	public QInputDevice_DeviceType DeviceType()
	{
		return CQt.QInputEvent_DeviceType((.)this.ptr.Ptr);
	}
	public void* Modifiers()
	{
		return CQt.QInputEvent_Modifiers((.)this.ptr.Ptr);
	}
	public void SetModifiers(void* modifiers)
	{
		CQt.QInputEvent_SetModifiers((.)this.ptr.Ptr, modifiers);
	}
	public c_ulonglong Timestamp()
	{
		return CQt.QInputEvent_Timestamp((.)this.ptr.Ptr);
	}
	public QEvent_Type Type()
	{
		return CQt.QEvent_Type((.)this.ptr.Ptr);
	}
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous((.)this.ptr.Ptr);
	}
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted((.)this.ptr.Ptr);
	}
	public void Accept()
	{
		CQt.QEvent_Accept((.)this.ptr.Ptr);
	}
	public void Ignore()
	{
		CQt.QEvent_Ignore((.)this.ptr.Ptr);
	}
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent((.)this.ptr.Ptr);
	}
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent((.)this.ptr.Ptr);
	}
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent((.)this.ptr.Ptr);
	}
	public c_int RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	public c_int RegisterEventType1(c_int hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
}
interface IQWheelEvent : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QTabletEvent
// --------------------------------------------------------------
[CRepr]
struct QTabletEvent_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QTabletEvent_new")]
	public static extern QTabletEvent_Ptr QTabletEvent_new(QEvent_Type t, void** device, void** pos, void** globalPos, double pressure, float xTilt, float yTilt, float tangentialPressure, double rotation, float z, void* keyState, Qt_MouseButton button, void* buttons);
	[LinkName("QTabletEvent_Delete")]
	public static extern void QTabletEvent_Delete(QTabletEvent_Ptr self);
	[LinkName("QTabletEvent_Clone")]
	public static extern void** QTabletEvent_Clone(void* self);
	[LinkName("QTabletEvent_Pos")]
	public static extern void* QTabletEvent_Pos(void* self);
	[LinkName("QTabletEvent_GlobalPos")]
	public static extern void* QTabletEvent_GlobalPos(void* self);
	[LinkName("QTabletEvent_PosF")]
	public static extern void* QTabletEvent_PosF(void* self);
	[LinkName("QTabletEvent_GlobalPosF")]
	public static extern void* QTabletEvent_GlobalPosF(void* self);
	[LinkName("QTabletEvent_X")]
	public static extern c_int QTabletEvent_X(void* self);
	[LinkName("QTabletEvent_Y")]
	public static extern c_int QTabletEvent_Y(void* self);
	[LinkName("QTabletEvent_GlobalX")]
	public static extern c_int QTabletEvent_GlobalX(void* self);
	[LinkName("QTabletEvent_GlobalY")]
	public static extern c_int QTabletEvent_GlobalY(void* self);
	[LinkName("QTabletEvent_HiResGlobalX")]
	public static extern double QTabletEvent_HiResGlobalX(void* self);
	[LinkName("QTabletEvent_HiResGlobalY")]
	public static extern double QTabletEvent_HiResGlobalY(void* self);
	[LinkName("QTabletEvent_UniqueId")]
	public static extern c_longlong QTabletEvent_UniqueId(void* self);
	[LinkName("QTabletEvent_Pressure")]
	public static extern double QTabletEvent_Pressure(void* self);
	[LinkName("QTabletEvent_Rotation")]
	public static extern double QTabletEvent_Rotation(void* self);
	[LinkName("QTabletEvent_Z")]
	public static extern double QTabletEvent_Z(void* self);
	[LinkName("QTabletEvent_TangentialPressure")]
	public static extern double QTabletEvent_TangentialPressure(void* self);
	[LinkName("QTabletEvent_XTilt")]
	public static extern double QTabletEvent_XTilt(void* self);
	[LinkName("QTabletEvent_YTilt")]
	public static extern double QTabletEvent_YTilt(void* self);
}
